--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -1,15 +1,11 @@
 FROM ghcr.io/cirruslabs/flutter:3.27.1 AS build-env
 
-WORKDIR /app
 RUN useradd -ms /bin/bash flutteruser
 RUN chown -R flutteruser:flutteruser /sdks/flutter
 RUN chown -R flutteruser:flutteruser /app
 COPY . /app/
 USER flutteruser
-
-# RUN flutter channel stable
-# RUN flutter upgrade
-# RUN flutter --version
+WORKDIR /app/
 RUN flutter pub get
 RUN flutter build web
 
